# Tetromino400

./: .gitignore  LANGS.md  README.md  api.py  colors.py  data.py  debug.py  game.py  objects.py  requirements.txt  save.csv  save.xml  setup.cfg  setup.py  tetris.py  tetris_v1.py  tetris_v2.py  tetris_v3.py
Tetromino400_pkg/: __init__.py  data.py
archives/: tetris_v2.py
devlog/: README.md  ch0.md
en/: README.md  SUMMARY.md  ch0.md
fr/: README.md  SUMMARY.md
pypi/: setup.cfg
tools/: colors.py
