[metadata]
name = Tetromino400 
version = 1.0.1
author = mseyne
author_email = michaelseyne@gmail.com
description = A famous falling blocks game clone.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mseyne/Tetromino400
project_urls =
    Bug Tracker = https://github.com/mseyne/Tetromino400/issues
classifiers =
    Topic :: Games/Entertainment :: Arcade
    Topic :: Software Development :: Libraries :: pygame
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
